# zwiftracing_api

./: .env_template  .gitignore  README.md  main.py  pyproject.toml
01_extract_from_zrapp/: README.md  endpoints.py
01_extract_from_zrapp/data/: rider_epoch.json  riders.json  zp_results.json
endpoints/: README.md  endpoints.py
endpoints/data/: club.json  club_from.json  rider.json  riders_epoch.json
extract/: README.md  endpoints.py
extract/data/: results.json
ingest/: README.md  zwiftracing_api.py
ingest/data/: zwiftracing_api_demo_ingest.duckdb
load/: README.md  load.py
load/data/: analytics.duckdb
